fix heading `::before` element, fix text-info in dark mode

--- a/public_html/assets/css/nf-core-dark.css
+++ b/public_html/assets/css/nf-core-dark.css
@@ -16,6 +16,9 @@ body {
 .text-dark, a.text-dark:focus, a.text-dark:hover {
   color: #e5e6e7!important;
 }
+.text-info{
+  color: #36646e!important;
+}
 .bg-secondary {
   background-color: rgba(50,50,50,.55)!important;
 }
